<resources>
    <string name="app_name">SuperShopper</string>
    <string name="facebook_app_id">532612537445839</string>
    <string name="fb_login_protocol_scheme">fb532612537445839</string>
    <string name="facebook_application_id" translatable="false">532612537445839</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb532612537445839</string>
    <string name="have_an_account_already_log_in">Have an account already? <big><font fgcolor="#1C95E2">Log in</font></big></string>
    <string name="dont_have_an_account_yet_register_now">Don\'t have an account yet? <big><font fgcolor="#1C95E2">Register Now</font></big></string>
    <string name="create_account">Create account</string>
    <string name="we_help_you_keep_your_shopping_list_in_mind">We help you keep \n your shopping list in mind!</string>
    <string name="log_in">Log in</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="terms_anp_conditions">Terms and Conditions</string>
    <string name="i_accept_terms_anp_conditions">I Accept <font fgcolor="#1C95E2">Terms and Conditions</font></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="i_accept_privacy_policy">I Accept <font fgcolor="#1C95E2">Privacy Policy</font></string>
    <string name="reset_password">Reset Password</string>
    <string name="please_fill_your_details_below">Please fill your details below!</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="delete_shopping_list">Delete shopping list</string>
    <string name="are_you_sure_you_want_to_leave_your_shopping_list">Are you sure you want\nto leave your shopping list?</string>
    <string name="yes_sure">Yes, sure</string>
</resources>