<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    app:layoutDescription="@xml/register_fragment_scene"
    tools:context=".ui.register.RegisterFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:alpha="0"
        android:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="600dp"
        android:layout_height="600dp"
        android:src="@drawable/ic_app_logo_darkblue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_logInText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_4xlarge"
        android:layout_marginEnd="@dimen/margin_xlarge"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/create_your_account"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_4xlarge"
        android:layout_marginEnd="@dimen/margin_4xlarge"
        app:boxBackgroundColor="@color/dark_gray_1"
        app:hintEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:startIconDrawable="@drawable/ic_person_blue"
        app:startIconTint="@color/blue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/textSize_regular"
            android:hint="@string/username"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_emailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_4xlarge"
        android:layout_marginEnd="@dimen/margin_4xlarge"
        app:boxBackgroundColor="@color/dark_gray_1"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_username"
        app:startIconDrawable="@drawable/ic_email_blue"
        app:startIconTint="@color/blue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_emailAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/textSize_regular"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_4xlarge"
        android:layout_marginEnd="@dimen/margin_4xlarge"
        app:boxBackgroundColor="@color/dark_gray_1"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_emailAddress"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_lock_blue"
        app:startIconTint="@color/blue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/textSize_regular"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chb_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/white"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/i_accept_terms_anp_conditions"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chb_privacyPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/white"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/i_accept_privacy_policy"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chb_terms" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_4xlarge"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_4xlarge"
        android:background="@drawable/shape_filled_blue_roundedcorners"
        android:fontFamily="@font/roboto_regular"
        android:paddingStart="@dimen/margin_large"
        android:paddingEnd="@dimen/margin_large"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chb_privacyPolicy" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_facebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_4xlarge"
        android:layout_marginTop="@dimen/margin_xxxlarge"
        android:layout_marginEnd="@dimen/margin_small"
        android:background="@drawable/shape_filled_blue_roundedcorners"
        android:fontFamily="@font/roboto_regular"
        android:paddingStart="@dimen/margin_large"
        android:paddingEnd="@dimen/margin_large"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_regular"
        app:layout_constraintEnd_toStartOf="@id/btn_google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_register" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_xxxlarge"
        android:layout_marginEnd="@dimen/margin_4xlarge"
        android:background="@drawable/shape_filled_blue_roundedcorners"
        android:fontFamily="@font/roboto_regular"
        android:paddingStart="@dimen/margin_large"
        android:paddingEnd="@dimen/margin_large"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_facebook"
        app:layout_constraintTop_toBottomOf="@id/btn_register" />

    <TextView
        android:id="@+id/tv_logInNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/have_an_account_already_log_in"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_facebook"
        app:layout_constraintVertical_bias="0.9" />

</androidx.constraintlayout.motion.widget.MotionLayout>