<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:drawablePadding="@dimen/margin_medium"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/delete_shopping_list"
        android:textAlignment="center"
        android:textColor="@color/main_text"
        android:textSize="@dimen/textSize_xlarge"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_trash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/horizontalLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@color/dark_gray_1"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_areYouSureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5xlarge"
        android:text="@string/are_you_sure_you_want_to_leave_your_shopping_list"
        android:textSize="@dimen/textSize_medium"
        android:textColor="@color/main_text"
        android:textAlignment="center"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintTop_toBottomOf="@id/horizontalLine"
        app:layout_constraintBottom_toTopOf="@id/btn_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_xxxlarge"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_xxlarge"
        android:background="@drawable/shape_whiteback_blueborder_roundedcorners"
        android:fontFamily="@font/roboto_regular"
        android:paddingStart="@dimen/margin_large"
        android:paddingEnd="@dimen/margin_large"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/inv_action_button_text"
        android:textSize="@dimen/textSize_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_yesSure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_areYouSureText"
        app:layout_constraintVertical_bias="0.01" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_yesSure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_xxxlarge"
        android:background="@drawable/shape_filled_blue_roundedcorners"
        android:fontFamily="@font/roboto_regular"
        android:paddingStart="@dimen/margin_large"
        android:paddingEnd="@dimen/margin_large"
        android:text="@string/yes_sure"
        android:textAllCaps="false"
        android:textColor="@color/action_button_text"
        android:textSize="@dimen/textSize_medium"
        app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        app:layout_constraintTop_toTopOf="@id/btn_cancel"
        app:layout_constraintVertical_bias="0.01" />

</androidx.constraintlayout.widget.ConstraintLayout>