<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_roundedallcorners_white"
    tools:context=".ui.forgotpassword.ForgotPasswordDialog">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:drawablePadding="@dimen/margin_small"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/textSize_xlarge"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_lock_with_questionmark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/horizontalLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@color/dark_gray"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_pleaseFillText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/please_fill_your_details_below"
        android:textSize="@dimen/textSize_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalLine" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_emailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xxxlarge"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:layout_marginEnd="@dimen/margin_xxxlarge"
        app:boxBackgroundColor="@color/dark_gray"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pleaseFillText"
        app:startIconDrawable="@drawable/ic_email_blue"
        app:startIconTint="@color/blue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_emailAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xxxlarge"
        android:layout_marginTop="@dimen/margin_5xlarge"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_xxlarge"
        android:background="@drawable/shape_whiteback_blueborder_roundedcorners"
        android:fontFamily="@font/roboto_regular"
        android:paddingStart="@dimen/margin_large"
        android:paddingEnd="@dimen/margin_large"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="@dimen/textSize_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_emailAddress" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_5xlarge"
        android:layout_marginEnd="@dimen/margin_xxxlarge"
        android:layout_marginBottom="@dimen/margin_xxlarge"
        android:background="@drawable/shape_filled_blue_roundedcorners"
        android:fontFamily="@font/roboto_regular"
        android:paddingStart="@dimen/margin_large"
        android:paddingEnd="@dimen/margin_large"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@id/til_emailAddress" />

    <ProgressBar
        android:id="@+id/dialogProgressBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:alpha="0"
        android:elevation="1dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/btn_reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>